--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@liveblocks/client": "^1.12.0",
     "@liveblocks/react": "^1.12.0",
     "@liveblocks/react-comments": "^1.12.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fabric": "^5.3.0",
@@ -21,7 +23,8 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "uui": "^1.0.7"
+    "uui": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
